# transl-AI-tor

./: .gitignore  README.md  app.py  config.py  deps.txt  main.py  pyproject.toml
helper-scripts/: barplot.py  crawl_site_recursively.py
