[project]
name = "transl-ai-tor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "crawl4ai>=0.8.6",
    "datasets>=4.8.4",
    "evaluate>=0.4.6",
    "gradio>=6.10.0",
    "openai-whisper>=20250625",
    "pytesseract>=0.3.13",
    "sacrebleu>=2.6.0",
    "torch>=2.11.0",
    "transformers>=5.4.0",
]
